# cadmus

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  build-docs.sh  build.sh  bundle.sh  devenv.nix  devenv.yaml  download.sh  package-lock.json  package.json  release-please-config.json  release-plz.toml  renovate.json  wrangler.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: dependency-updater.agent.md
.github/instructions/: cargo-dependencies.instructions.md  cargo-features.instructions.md  devenv-docs.instructions.md  documentation-review-dev.instructions.md  documentation-review-user.instructions.md  documentation-review.instructions.md  ota-feature.instructions.md  rust-docs.instructions.md  rust-instrumentation.instructions.md  rust-logging.instructions.md  settings-docs.instructions.md  view-rendering-pattern.instructions.md
.github/workflows/: build-release-candidate.yml  cadmus-docs.yml  cargo.yml  copilot-setup-steps.yml  devenv-test.yml  docs-lint.yml  mdbook-pages.yml  mdbook-pr.yml  release.yml  renovate-config.yml
.zed/: tasks.json
contrib/: Settings-sample.toml
contrib/NickelMenu/: cadmus-tst
crates/cadmus/: Cargo.toml  build.rs
crates/cadmus/src/: app.rs
crates/core/: Cargo.toml  build.rs
crates/emulator/: Cargo.toml  build.rs
crates/emulator/src/: main.rs
crates/fetcher/: Cargo.toml
crates/importer/: Cargo.toml
docs/: book.toml
docs-portal/: .gitignore  config.toml
docs-portal/content/: _index.md
docs-portal/sass/: style.scss
docs-portal/static/: api  guide
(+112 files in other folders)
