[package]
name = "cadmus"
version = "0.9.46"
edition = "2021"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus"
path = "src/main.rs"

[features]
test = ["cadmus-core/test"]
otel = ["cadmus-core/otel"]

[dependencies]
cadmus-core = { path = "../core" }
tracing = "0.1"

[build-dependencies]
uuid = { version = "1.20.0", features = ["v7"] }
