[package]
name = "emulator"
version = "0.9.47"
edition = "2021"
authors = ["Cadmus Authors", "Bastien Dejean <nihilhill@gmail.com> (original Plato author)"]

[[bin]]
name = "cadmus-emulator"
path = "src/main.rs"

[dependencies]
cadmus-core = { path = "../core" }
sdl2 = "0.38.0"
tracing = "0.1"

[features]
default = []
emulator = ["cadmus-core/emulator"]
otel = ["cadmus-core/otel"]
test = ["cadmus-core/test"]
